@@ -1,5 +1,5 @@
-export uruk version to rc file, tnx Fruit
 
+document $uruk_version
 
 
 уто 05 13:47 < thijs> joostvb: ik krijg de volgende melding met uruk Vlook:
