@@ -47,6 +47,8 @@ ip4_noroute_ranges='127.0.0.1/8 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16'
 # allowed (checked using iptables 1.4.8-2).)
 ip6_noroute_ranges='::1/128 ::ffff:0:0/96 fc00::/7 fec0::/10 0200::/7 2001:0db8::/32'
 
+uruk_version="@URUK_VERSION@"
+
 test -r $config || {
     echo >&2 "No readable rc file $config found.  Please create one." && exit 1
 }
