@@ -2,6 +2,13 @@ Uruk NEWS - user visible changes (and some other changes also.)
 
 Refer to ChangeLog for detailed per-file info.
 
+uruk version 2014MMDD - The FIXME Release
+
+- script/uruk.in: make uruk_version available to rc files.  One can use that
+  to handle unsupported uruk versions gracefully in rc files.  Thanks Wessel
+  Dankers for suggestion.
+
+
 uruk version 20140627 - The Vlook Release
 
 - script/uruk: next to protocols tcp and udp, uruk now has preliminary
